# finkrit

./: .gitignore  BUILD  MODULE.bazel  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run
apps/finkritweb/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
apps/finkritweb/private/: todo.md
apps/finkritweb/src/: app.html
apps/finkritweb/src/api/: client.ts
apps/finkritweb/src/components/chat/: ChatDock.svelte  ChatInput.svelte  ChatMessage.svelte  ChatPanel.svelte
apps/finkritweb/src/components/layout/: AppShell.svelte  LeftSidebar.svelte  SidebarItem.svelte  SidebarSection.svelte
apps/finkritweb/src/components/portfolio/: AllocationBar.svelte  HoldingRow.svelte  HoldingsTable.svelte  PortfolioSummary.svelte  PortfolioTable.svelte  PortfolioUpload.svelte  PortfolioView.svelte  ReviewNotes.svelte  RiskCard.svelte  RiskView.svelte  Section.svelte
apps/finkritweb/src/components/ui/: Button.svelte  Icon.svelte  MeterBar.svelte  StatCard.svelte
apps/finkritweb/src/lib/: format.ts
apps/finkritweb/src/lib/portfolio/: metrics.ts
apps/finkritweb/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/finkritweb/src/stores/: chat.svelte.ts  portfolio.svelte.ts  ui.svelte.ts
apps/finkritweb/src/theme/: theme.css
apps/finkritweb/src/utils/: date.ts
finkrit/: __init__.py  cli.py  web.py
scripts/: run.py
services/api/finkritserver/: app.py  portfolio.py  schemas.py
services/api/finkritserver/tests/: __init__.py  test_app.py  test_spa.py  test_upload.py
tests/: BUILD  __init__.py  fixtures.py
tests/risk/: conftest.py  test_beta.py
